[gd_scene format=3 uid="uid://cbhmkywwi6kca"]

[ext_resource type="Script" uid="uid://b6suav25os447" path="res://player/player.gd" id="1_oul6g"]
[ext_resource type="Script" uid="uid://cnnro745aa5g1" path="res://player/camera_rig.gd" id="1_w4b2p"]
[ext_resource type="Script" uid="uid://ceyxb5guhuacj" path="res://ui/mask_meter.gd" id="2_8vgyb"]
[ext_resource type="Script" uid="uid://dfox5aak4tnpu" path="res://ui/mask_overlay.gd" id="3_0k6v2"]
[ext_resource type="Script" uid="uid://duocm2fldhbwn" path="res://ui/hud.gd" id="4_r0rve"]
[ext_resource type="Shader" uid="uid://b3ymesv0uanxp" path="res://ui/mask_effect.gdshader" id="5_yi6qj"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_oul6g"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_oul6g"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mask"]
shader = ExtResource("5_yi6qj")
shader_parameter/alpha = 0.0
shader_parameter/scale = 1.06
shader_parameter/border_mask = 2.0
shader_parameter/strength = 10.0
shader_parameter/tint = Color(0.55, 0.8, 1, 1)
shader_parameter/tint_strength = 0.14
shader_parameter/brightness = 1.02
shader_parameter/contrast = 1.08
shader_parameter/saturation = 1.1
shader_parameter/gamma = 1.05
shader_parameter/curvature = 0.14
shader_parameter/corner_soften = 0.06
shader_parameter/vignette = 0.38
shader_parameter/scanline_strength = 0.95
shader_parameter/scanline_density = 1.15
shader_parameter/interlace_strength = 0.2
shader_parameter/mask_strength = 0.22
shader_parameter/mask_scale = 1.0
shader_parameter/chroma_offset_px = 1.6
shader_parameter/luma_smear_px = 2.2
shader_parameter/jitter_px = 1.8
shader_parameter/wobble_px = 1.5
shader_parameter/tape_noise = 0.22
shader_parameter/tape_lines = 0.35
shader_parameter/roll_speed = 0.1
shader_parameter/roll_strength = 0.15
shader_parameter/glow_strength = 0.25
shader_parameter/glow_threshold = 0.65

[node name="Player" type="CharacterBody3D" unique_id=1197631855]
script = ExtResource("1_oul6g")

[node name="CollisionShape3D" type="CollisionShape3D" parent="." unique_id=656022287]
shape = SubResource("CapsuleShape3D_oul6g")

[node name="MeshInstance3D" type="MeshInstance3D" parent="." unique_id=996220031]
mesh = SubResource("CapsuleMesh_oul6g")

[node name="CameraRig" type="Node3D" parent="." unique_id=1533754200]
script = ExtResource("1_w4b2p")

[node name="Camera3D" type="Camera3D" parent="CameraRig" unique_id=2078924707]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.74056655, 0.3860973)

[node name="MaskUI" type="CanvasLayer" parent="." unique_id=1203414419]

[node name="MaskOverlay" type="ColorRect" parent="MaskUI" unique_id=1083436622]
material = SubResource("ShaderMaterial_mask")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("3_0k6v2")

[node name="HUD" type="Control" parent="MaskUI" unique_id=1324031936]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("4_r0rve")

[node name="KeyLabel" type="Label" parent="MaskUI/HUD" unique_id=1183460876]
layout_mode = 0
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -50.0
offset_right = 120.0
offset_bottom = -26.0
text = "KEY"

[node name="InteractLabel" type="Label" parent="MaskUI/HUD" unique_id=2020025395]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -60.0
offset_right = 180.0
offset_bottom = -36.0
horizontal_alignment = 1

[node name="MessageLabel" type="Label" parent="MaskUI/HUD" unique_id=1997255123]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -180.0
offset_top = -92.0
offset_right = 180.0
offset_bottom = -68.0
horizontal_alignment = 1

[node name="MaskMeter" type="Control" parent="MaskUI" unique_id=1386476395]
layout_mode = 3
anchors_preset = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 216.0
offset_bottom = 40.0
script = ExtResource("2_8vgyb")

[node name="ProgressBar" type="ProgressBar" parent="MaskUI/MaskMeter" unique_id=1974463109]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
show_percentage = false
